# curso-basico-django

./: db.sqlite3  pyproject.toml
company/: admin.py  models.py  urls.py  views.py
company/migrations/: 0001_initial.py  0002_documentos.py  0003_metricas.py
company/templates/: add_company.html  company.html  list_companies.html
core/: settings.py  urls.py
investors/: apps.py  urls.py  views.py
investors/templates/: suggestion.html
templates/: base.html
templates/partials/: navigation_bar.html
templates/static/companies/css/: list_companies.css
templates/static/geral/css/: base.css
templates/static/users/css/: users.css
users/: views.py
users/templates/: login.html  register.html
